examples/test/testpolicy11282.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11282
  namespace: namespace240
spec:
  podSelector:
    matchLabels:
      key37: value44
      key33: value22
      key44: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value32
          key18: value15
      podSelector:
        matchLabels:
          key48: value29
          key47: value9
